<resources>
    <string name="app_name">Calculator</string>
    <string name="multi_button_text">*</string>
    <string name="equal_button_text">=</string>
    <string name="zero_button_text">0</string>
    <string name="clear_button_text">C</string>
    <string name="divide_button_text">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="minus_button_text">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add_button_text">+</string>
    <string name="num_1">Num 1</string>
    <string name="num_2">Num 2</string>
    <string name="ans">Ans</string>
    <string name="num2">0</string>
    <string name="num1">0</string>
</resources>
