<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="center"
    tools:context="com.example.android.calculator.MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/num_1_field"
            android:layout_height="wrap_content"
            android:hint="@string/num_1"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/num_2_field"
            android:layout_height="wrap_content"
            android:hint="@string/num_2"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/ans_field"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:hint="@string/ans"
            android:text="0"
            android:textAlignment="center" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/one_button"
            android:onClick="onNumberButtonClick"
            android:text="@string/_1" />

        <Button
            android:id="@+id/two_button"
            android:onClick="onNumberButtonClick"
            android:text="@string/_2" />


        <Button
            android:id="@+id/three_button"
            android:onClick="onNumberButtonClick"
            android:text="@string/_3" />

        <Button
            android:id="@+id/add_button"
            android:onClick="onOperatorButtonClick"
            android:text="@string/add_button_text" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/four_button"
            android:onClick="onNumberButtonClick"
            android:text="@string/_4" />

        <Button
            android:id="@+id/five_button"
            android:onClick="onNumberButtonClick"
            android:text="@string/_5" />


        <Button
            android:id="@+id/six_button"
            android:onClick="onNumberButtonClick"
            android:text="@string/_6" />

        <Button
            android:id="@+id/minus_button"
            android:onClick="onOperatorButtonClick"
            android:text="@string/minus_button_text" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/seven_button"
            android:onClick="onNumberButtonClick"
            android:text="@string/_7" />

        <Button
            android:id="@+id/eight_button"
            android:onClick="onNumberButtonClick"
            android:text="@string/_8" />


        <Button
            android:id="@+id/nine_button"
            android:onClick="onNumberButtonClick"
            android:text="@string/_9" />

        <Button
            android:id="@+id/divide_button"
            android:onClick="onOperatorButtonClick"
            android:text="@string/divide_button_text" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/clear_button"
            android:onClick="onOperatorButtonClick"
            android:text="@string/clear_button_text" />

        <Button
            android:id="@+id/zero_button"
            android:onClick="onNumberButtonClick"
            android:text="@string/zero_button_text" />


        <Button
            android:id="@+id/equalTo_button"
            android:onClick="onOperatorButtonClick"
            android:text="@string/equal_button_text" />

        <Button
            android:id="@+id/multiply_button"
            android:onClick="onOperatorButtonClick"
            android:text="@string/multi_button_text" />
    </TableRow>
</TableLayout>
